@@ -5,7 +5,6 @@ ENV shell="/usr/bin/jshell"
 VOLUME /tmp
 WORKDIR /opt/cloudterm/
 COPY target/cloudterm.jar .
-COPY java.policy .
 RUN useradd -ms /bin/bash tryjshell
 RUN chmod -R  a-w / || true
 RUN chmod -R  a+w /tmp || true
@@ -13,5 +12,5 @@ RUN chmod -R  a+w /home/tryjshell/ || true
 RUN chmod -R  a+x /usr/bin/java || true
 RUN chmod -R  a+x /usr/bin/jshell || true
 USER tryjshell
-CMD ["java","-Djava.security.manager","-Djava.security.policy=java.policy","-jar","./cloudterm.jar"]
+CMD ["java","-jar","./cloudterm.jar"]
 EXPOSE 8080
